<resources>
    <string name="app_name">Police Assistance</string>

    <string name="one">ПРОФІЛЬ</string>
    <string name="two">ЗАЯВА</string>
    <string name="three">ВИКЛИК</string>

    <string name="quick_call">Екстрений виклик</string>
    <string name="police_number">102</string>

    <string name="lastname"><u>Прізвище та Ім\'я</u></string>
    <string name="hint_lastname">Наприклад: Шатов Тарас</string>

    <string name="phone_number"><u>Ваш номер телефону</u></string>
    <string name="text_phone_number">+380</string>
    <string name="hint_phone_number">Наприклад: +380445551445</string>

    <string name="theme">Тема звернення</string>
    <string name="hint_theme">Наприклад: крадіжка</string>

    <string name="hint_location">Місце злочину</string>

    <string name="message">Текст повідомлення</string>
    <string name="hint_message">Опишіть що сталося</string>

    <string name="hello_world">Hello world!</string>
    <string name="hint_quick_call">Натисніть для виклику</string>

    <string name="button_to_call_the_police">Button to call the police</string>
    <string name="action_settings">Settings</string>


    <string name="btn_icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>
    <string name="title_activity_icon_text_tabs">Icon and Text Tabs</string>

    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_pinned_top_tabs">Pin Top Tabs</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="send_button" />
    <string name="label_send_button">НАДІСЛАТИ</string>
    <string name="text_claim">Заява</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="gps_header">Навігація</string>
    <string name="proccessing_with_gps">Proccessing with GPS</string>
    <string name="hint_gps_waiting">Визначаємо коодинати</string>
    <string name="longitude_hint">Довгота:</string>
    <string name="latitude_hint">Широта:</string>
    <string name="recieving_coordinates">визначається...</string>
    <string name="back_button">ПОВЕРНУТИСЯ</string>
    <string name="form_cleanup">Очищення форми</string>
    <string name="settings_name">Налаштування</string>
    <string name="navigation_settings">Джерело координат</string>
    <string name="internet">Інтернет</string>
    <string name="GPS">GPS</string>
    <string name="save">ЗБЕРЕГТИ</string>
    <string name="title_activity_claim_resault">ClaimResaultActivity</string>
    <string name="old_claims">Історія</string>
    <string name="title_activity_observe">ObserveActivity</string>
    <string name="theme_label">Тема звернення</string>
    <string name="message_label">Вміст звернення</string>
    <string name="clean_form">Очистити форму</string>
    <string name="location_hint">Місцезнаходження</string>


</resources>
