<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.materialtabs.fragments.OneFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_name"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lastname"
            android:id="@+id/hint_lastname_hint"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"
            android:ems="10"
            android:id="@+id/lastname_settings"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/hint_lastname" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/hint_phone_number"
            android:text="@string/phone_number"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_number_settings"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_phone_number"
            android:text="@string/text_phone_number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/navigation_settings"
            android:id="@+id/textView2"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/internet"
                android:id="@+id/radio_button_internet"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GPS"
                android:id="@+id/radio_button_gps"
                android:layout_marginLeft="8dp"
                android:contextClickable="false"
                android:layout_marginRight="8dp" />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save_button"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="8dp"
            android:textColor="@color/abc_primary_text_material_dark"
            android:background="@android:color/holo_purple"
            android:foregroundGravity="bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/old_claims"
            android:id="@+id/old_claims"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/old_claims_list" />

    </LinearLayout>
</RelativeLayout>
