<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.materialtabs.fragments.TwoFragment"
    android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="140dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_message">

            <TextView
                android:text="@string/text_claim"
                android:textSize="40sp"
                android:textStyle="bold"
                android:id="@+id/title"
                android:textColor="@color/abc_primary_text_disable_only_material_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/brush_button"
                    android:layout_gravity="right"
                    android:background="@android:color/holo_orange_light"
                    android:src="@drawable/ic_action_brush"
                    android:padding="2dp"
                    android:layout_marginRight="8dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:id="@+id/label_lastname"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName"
                android:ems="10"
                android:id="@+id/lastname"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_lastname"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/phone_number"
                android:id="@+id/label_phone_number"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/phone_number"
                android:hint="@string/hint_phone_number"
                android:text="@string/text_phone_number"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/theme"
                android:id="@+id/label_theme"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/theme"
                android:hint="@string/hint_theme"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/hint_location"
                android:id="@+id/label_location"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/location_linear">

                <EditText
                    android:layout_margin="8dp"
                    android:id="@+id/location"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/auto_location"
                    android:padding="2dp"
                    android:layout_width="wrap_content"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_action_location"
                    android:layout_height="wrap_content"
                    tools:ignore="contentDescription"
                    android:background="@color/listen_location_button_color" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/message"
                android:id="@+id/label_message"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/message"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_message" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_send_button"
                android:id="@+id/send_button"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/abc_primary_text_material_dark"
                android:background="@color/send_button_color"
                android:layout_marginBottom="8dp"
                android:layout_gravity="bottom" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
