<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.GPSActivity"
    tools:showIn="@layout/activity_gps">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gps_header"
        android:id="@+id/gps_ocuring"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hint_gps_waiting"
        android:id="@+id/hint_gps_ocurring"
        android:layout_below="@+id/gps_ocuring"
        android:layout_centerHorizontal="true"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="24dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:id="@+id/back_button"
        android:textColor="@color/abc_primary_text_material_dark"
        android:background="@color/accent_material_light"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/gps_ocuring"
        android:layout_alignStart="@+id/gps_ocuring" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/longitude_hint"
        android:id="@+id/longitude_hint"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/hint_gps_ocurring"
        android:layout_alignLeft="@+id/latitude_hint"
        android:layout_alignStart="@+id/latitude_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/latitude_hint"
        android:id="@+id/latitude_hint"
        android:textColor="@color/abc_primary_text_disable_only_material_light"
        android:layout_alignTop="@+id/longitude_field"
        android:layout_alignLeft="@+id/map_image"
        android:layout_alignStart="@+id/map_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/recieving_coordinates"
        android:id="@+id/longitude_field"
        android:layout_below="@+id/latitude_field"
        android:layout_alignLeft="@+id/latitude_field"
        android:layout_alignStart="@+id/latitude_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/recieving_coordinates"
        android:id="@+id/latitude_field"
        android:layout_alignTop="@+id/longitude_hint"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/map_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/back_button"
        android:layout_below="@+id/latitude_hint"
        android:layout_marginTop="8dp" />

</RelativeLayout>
